--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,15 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  flutter_svg: ^2.0.5
+  flutter_screenutil: ^5.7.0
+  carousel_slider: ^4.2.1
+  google_fonts: ^4.0.3
+  collection: ^1.17.0
+  firebase_auth: ^4.2.2
+  firebase_core: ^2.10.0
+  pinput: ^2.2.31
+  fluttertoast: ^8.2.1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
@@ -19,4 +28,9 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
+  assets:
+  - assets/images/
+  - assets/images/info/
+  - assets/images/choose_user/
+  - assets/images/crew_sign_in/
 
