--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   get_it: ^7.6.0
   shared_preferences: ^2.1.1
   flutter_secure_storage: ^8.0.0
+  lottie: ^2.4.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
@@ -36,6 +37,7 @@ dev_dependencies:
 flutter: 
   uses-material-design: true
   assets:
+  - assets/
   - assets/images/
   - assets/images/info/
   - assets/images/choose_user/
