--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   get_it: ^7.6.0
   shared_preferences: ^2.1.1
   flutter_secure_storage: ^8.0.0
-  lottie: ^2.4.0
+  lottie: 
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
