--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.1.1
   flutter_secure_storage: ^8.0.0
   lottie: 
+  cached_network_image: ^3.2.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
