--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   lottie: 
   cached_network_image: ^3.2.3
   country_picker: ^2.0.20
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
@@ -46,4 +47,5 @@ flutter:
   - assets/images/crew_sign_in/
   - assets/images/email_verification/
   - assets/images/account_under_verification/
+  - assets/images/dashboard/
 
