profile page added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,4 +48,5 @@ flutter:
   - assets/images/email_verification/
   - assets/images/account_under_verification/
   - assets/images/dashboard/
+  - assets/images/profile/
 
