--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_mp_ship
-version: 1.0.10+10
+version: 1.0.12+12
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -31,6 +31,9 @@ dependencies:
   cached_network_image: ^3.2.3
   country_picker: ^2.0.20
   curved_navigation_bar: ^1.0.3
+  flutter_typeahead: ^4.6.2
+  permission_handler: ^10.3.0
+  time_machine: ^0.9.17
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
