manage user module added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,4 +55,5 @@ flutter:
   - assets/images/account_under_verification/
   - assets/images/dashboard/
   - assets/images/profile/
+  - assets/images/employer_invite/
 
