--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.17+17
 publish_to: none
 description: A new Flutter project.
 environment: 
-  sdk: '>=2.17.0 <3.0.3'
+  sdk: '>=2.17.0 <=3.0.6'
 
 dependencies: 
   get_cli: ^1.8.1
