--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,14 @@ name: join_mp_ship
 version: 1.0.17+17
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.17.0 <=3.0.6'
+environment:
+  sdk: ">=2.17.0 <=3.0.6"
 
-dependencies: 
+dependencies:
   get_cli: ^1.8.1
   cupertino_icons: ^1.0.2
   get: 4.6.5
-  flutter: 
+  flutter:
     sdk: flutter
   flutter_svg: ^2.0.5
   flutter_screenutil: ^5.7.0
@@ -27,33 +27,32 @@ dependencies:
   get_it: ^7.6.0
   shared_preferences: ^2.1.1
   flutter_secure_storage: ^8.0.0
-  lottie: 
+  lottie:
   cached_network_image: ^3.2.3
   country_picker: ^2.0.20
   curved_navigation_bar: ^1.0.3
   flutter_typeahead: ^4.6.2
   permission_handler: ^10.3.0
   time_machine: ^0.9.17
-  device_info_plus: 
+  device_info_plus:
   flutter_document_picker: ^5.2.3
+  text_form_field_validator: ^0.0.3
 
-
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
   assets:
-  - assets/
-  - assets/images/
-  - assets/images/info/
-  - assets/images/choose_user/
-  - assets/images/crew_sign_in/
-  - assets/images/email_verification/
-  - assets/images/account_under_verification/
-  - assets/images/dashboard/
-  - assets/images/profile/
-  - assets/images/employer_invite/
-
+    - assets/
+    - assets/images/
+    - assets/images/info/
+    - assets/images/choose_user/
+    - assets/images/crew_sign_in/
+    - assets/images/email_verification/
+    - assets/images/account_under_verification/
+    - assets/images/dashboard/
+    - assets/images/profile/
+    - assets/images/employer_invite/
