--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_mp_ship
-version: 1.0.17+17
+version: 1.0.18+18
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -23,16 +23,16 @@ dependencies:
   dropdown_button2: ^2.1.0
   image_picker: ^0.8.7+4
   firebase_messaging: ^14.6.1
-  file_picker: ^4.6.1
+  file_picker: ^4.6.1 # need to remove
   get_it: ^7.6.0
   shared_preferences: ^2.1.1
-  flutter_secure_storage: ^8.0.0
+  flutter_secure_storage: ^8.0.0 # need to remove
   lottie: ^2.5.0
   cached_network_image: ^3.2.3
   country_picker: ^2.0.20
   curved_navigation_bar: ^1.0.3
   flutter_typeahead: ^4.6.2
-  permission_handler: ^10.3.0
+  permission_handler: ^10.3.0 # need to remove
   time_machine: ^0.9.17
   device_info_plus:
   flutter_document_picker: ^5.2.3
