--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   device_info_plus:
   flutter_document_picker: ^5.2.3
   text_form_field_validator: ^0.0.3
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_lints: ^2.0.0
