--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_mp_ship
-version: 1.0.26+26
+version: 1.0.27+27
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -14,14 +14,14 @@ dependencies:
   flutter_svg: ^2.0.5
   flutter_screenutil: ^5.7.0
   carousel_slider: ^4.2.1
-  google_fonts: ^4.0.3
+  google_fonts: ^5.1.0
   collection: ^1.17.0
   firebase_auth: ^4.2.2
   firebase_core: ^2.10.0
-  pinput: ^2.2.31
+  pinput: ^3.0.0
   fluttertoast: ^8.2.1
   dropdown_button2: ^2.1.0
-  image_picker: ^0.8.7+4
+  image_picker: ^1.0.2
   firebase_messaging: ^14.6.1
   get_it: ^7.6.0
   shared_preferences: ^2.1.1
@@ -40,6 +40,7 @@ dependencies:
   share_plus: ^7.1.0
   widgets_to_image: ^0.0.2
   path_provider: ^2.1.0
+  connectivity_plus: ^4.0.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
