--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,16 +30,16 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            <intent-filter>
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" /> 
                 <category android:name="android.intent.category.BROWSABLE" /> 
                 <!-- Accepts URIs that begin with YOUR_SCHEME://YOUR_HOST --> 
-                <data android:scheme="http" 
-                android:host="www.designwaala.me" />
-                <data android:scheme="http"
-                  android:host="joinmyship.jms"
-                  android:pathPrefix=""/> 
+                <!-- <data android:scheme="http" 
+                android:host="www.designwaala.me" /> -->
+                <data android:scheme="https" />
+                <data android:scheme="http" />
+                <data android:host="designwaala.me" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
