--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_mp_ship
-version: 1.0.40+40
+version: 1.0.41+41
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.0
   connectivity_plus: ^4.0.2
   flutter_downloader: ^1.11.1
+  story_view: ^0.15.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
