--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   connectivity_plus: ^4.0.2
   flutter_downloader: ^1.11.1
   story_view: ^0.15.0
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
