endpoint domain changed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,10 +36,10 @@
                 <category android:name="android.intent.category.BROWSABLE" /> 
                 <!-- Accepts URIs that begin with YOUR_SCHEME://YOUR_HOST --> 
                 <!-- <data android:scheme="http" 
-                android:host="www.designwaala.me" /> -->
+                android:host="www.joinmyship.com" /> -->
                 <data android:scheme="https" />
                 <data android:scheme="http" />
-                <data android:host="designwaala.me" />
+                <data android:host="joinmyship.com" />
             </intent-filter>
         </activity>
                       <provider
