--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   flutter_secure_storage: ^9.0.0
   firebase_remote_config: ^4.3.8
+  razorpay_flutter: ^1.3.6
+  firebase_crashlytics: ^3.4.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
