--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_my_ship
-version: 1.0.56+56
+version: 1.0.57+57
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -48,6 +48,7 @@ dependencies:
   firebase_remote_config: ^4.3.8
   razorpay_flutter: ^1.3.6
   firebase_crashlytics: ^3.4.9
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
