--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   razorpay_flutter: ^1.3.6
   firebase_crashlytics: ^3.4.9
   intl: ^0.18.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
