--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_my_ship
-version: 1.0.62+62
+version: 1.0.63+63
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -50,6 +50,7 @@ dependencies:
   firebase_crashlytics: ^3.4.9
   intl: ^0.18.1
   dotted_border: ^2.1.0
+  in_app_review: ^2.0.9
 
 dev_dependencies:
   flutter_lints: ^2.0.0
