url scheme updated

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,7 +31,7 @@
 			<string>joinmyship</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>http</string>
+				<string>app-1-696639212337-ios-3a409b97d563b8407bbe10</string>
 			</array>
 		</dict>
 	</array>
