--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_my_ship
-version: 1.2.0+64
+version: 1.2.1+65
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -34,8 +34,7 @@ dependencies:
   device_info_plus:
   flutter_document_picker: ^5.2.3
   text_form_field_validator: ^0.0.3
-  url_launcher: ^6.1.12
-  package_info_plus: ^4.1.0
+  url_launcher: ^6.1.121  5ackage_info_plus: ^4.1.0
   uni_links: ^0.5.1
   share_plus: ^7.1.0
   widgets_to_image: ^0.0.2
