--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: join_my_ship
-version: 1.2.1+65
+version: 1.2.3+67
 publish_to: none
 description: A new Flutter project.
 environment:
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.18.1
   dotted_border: ^2.1.0
   in_app_review: ^2.0.9
+  open_store: ^0.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
